--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -4,10 +4,14 @@
 
 @layer components {
   .column-container {
-    @apply block border border-black rounded-xl basis-0 grow px-7 justify-center w-96 h-auto hover:scale-105 duration-150;
+    @apply block border border-black rounded-xl basis-0 grow px-7 justify-center w-96;
   }
 
   .container-header {
     @apply text-3xl font-semibold px-3 my-1
+  }
+
+  .list-item {
+    @apply py-2 hover:scale-125 duration-200
   }
 }
