--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .column-container {
-    @apply block border border-black rounded-xl basis-0 grow px-7 m-3 justify-center w-96;
+    @apply block border border-black rounded-xl px-7 m-3 w-96;
   }
 
   .container-header {
