Add nav item underline hover effect + update style

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,9 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer components {
-  .nav-item {
-    @apply capitalize text-gray-600 font-semibold hover:text-[#646cff] hover:scale-110 cursor-pointer transition-colors duration-150;
-  }
+    .nav-item {
+        @apply capitalize text-gray-600 font-semibold hover:text-[#646cff] hover:scale-105 cursor-pointer transition-transform duration-150;
+    }
+    .resume-btn {
+        @apply capitalize text-gray-600 font-semibold hover:text-[#646cff] hover:scale-105 cursor-pointer transition-all duration-150
+        bg-transparent border-2 border-[#646cff] rounded-md py-2 px-4;
+    }
+}
+
+@layer utilities {
+    .nav-item::after {
+        @apply content-[''] bg-[#646cff] h-[3px] w-[0%] left-0 -bottom-[5px] rounded-xl absolute duration-150;
+    }
+    .nav-item:hover::after {
+        @apply w-[100%];
+    }
 }
