--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
 
 @layer components {
     .nav-item {
-        @apply capitalize text-gray-600 font-semibold cursor-pointer hover:text-[#646cff] hover:scale-105 transition-transform duration-150;
+        @apply capitalize text-[1.05rem] text-gray-600 font-semibold cursor-pointer hover:text-[#646cff] hover:scale-105 transition-transform duration-150;
     }
     .resume-btn {
         @apply capitalize text-gray-600 font-semibold hover:text-[#646cff] hover:scale-105 cursor-pointer transition-all duration-150
